--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,18 +10,31 @@
     <th></th>
   </tr>
 
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.title %></td>
-    <td><%= post.body %></td>
-    <td><%= post.user_id %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+  <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td><%= post.body %></td>
+        <td><%= post.user_id %></td>
+        <td><%= link_to 'Show', post %></td>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+  <% end %>
 </table>
 
 <br />
 
 <%= link_to 'New Post', new_post_path %>
+
+
+
+
+<% content_for :sidebar do %>
+    <h3>Send an SMS notification!</h3>
+    <%= simple_form_for @sms, url: "/sms" do |f| %>
+        <%= f.input :to %>
+        <%= f.input :from %>
+        <%= f.input :message %>
+        <%= f.submit :submit %>
+    <% end %>
+<% end %>
